[tool]
[tool.poetry]
name = "py-httpd-manager"
version = "0.1.3"
description = "interact with httpd's mod_proxy_balancer management interface"
authors = ["Kyle Smith <smithk86@smc3.com>"]
license = "MIT"
repository = "https://github.com/smithk86/py-httpd-manager"
packages = [
    { include = "httpd_manager" }
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.21.1"
beautifulsoup4 = "^4.10.0"
dateparser = "^1.1.0"
packaging = "^21.3"
pytz = "^2021.3"
tzdata = "^2021.5"
lxml = "^4.7.1"

[tool.poetry.dev-dependencies]
mypy = "^0.920"
pytest = "^6.2"
pytest-asyncio = "^0.16.0"
pytest-mypy = "^0.8.1"
docker = "^5.0.3"
respx = "^0.19.0"
types-beautifulsoup4 = "^4.10.5"
types-dateparser = "^1.0.8"
types-pytz = "^2021.3.3"

[tool.poetry.scripts]
pytest = "pytest:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--mypy"
