[tool]
[tool.poetry]
name = "py-httpd-manager"
version = "0.1.4-dev"
description = "interface with httpd's mod_status and mod_proxy_balancer management pages"
authors = ["Kyle Smith <smithk86@gmail.com>"]
license = "MIT"
repository = "https://github.com/smithk86/py-httpd-manager"
packages = [
    { include = "httpd_manager" }
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "*"
beautifulsoup4 = "*"
dateparser = "*"
packaging = "*"
lxml = "*"
pydantic = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
anyio = "*"
pytest-mypy = "*"
pytest-httpx = "*"
pytest-docker = "*"
types-beautifulsoup4 = "*"
types-dateparser = "*"
types-pytz = "*"

[tool.poetry.scripts]
pytest = "pytest:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--mypy"
asyncio_mode = "strict"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[[tool.mypy.overrides]]
module = [
    "pytest_docker.plugin",
    "lxml",
    "pytest_asyncio"
]
ignore_missing_imports = true
